Candidateize Workers before Matching; score refactor
Change refill flow to candidateize due HOT before Matching (Pacer -> candidateize -> Matching) and make Matching accept opaque candidate fences (Map<workerId,score>) instead of HeldCandidate lists. Introduce high-mark WorkerScore encoding (separates candidate/ordinary marks and time) and new Score Owner APIs (candidateizeObservedHotScores, recycleObservedHotCandidates, observeHotCandidateScoresBefore, advancePastScoreTimesToNow, etc.). Update CandidatePool/Pool policies to use local TTLs and admission semantics. Rename/adjust calls across Pacer, Matching, Server and many tests/docs. Add integration test WorkerCandidateGenerationIntegrationTest. Note: new Redis score layout requires a new scope; no compatibility reader/migration added.